[package]
name = "bevy_ui_mod_alerts"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "default_font",
] }
anyhow = "1.0"

[dev-dependencies]
bevy_editor_pls = "*"
bevy_mod_try_system = { version = "0.1" }

[[example]]
name = "alerts"
path = "examples/alerts.rs"
required-features = ["bevy/bevy_winit", "bevy/x11"]
