[package]
name = "bevy_ui_mod_alerts"
version = "0.1.0"
authors = ["Sean Sullivan <me@snen.dev>"]
description = "Easy-spawn UIs that look like little popups."
repository = "https://github.com/snendev-labs/bevy_ui_mod_alerts"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "alerts", "ui", "game", "gamedev"]
readme = "README.md"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_ui",
    "bevy_text",
    "default_font",
] }

[dev-dependencies]
bevy_mod_try_system = { version = "0.1" }

[[example]]
name = "alerts"
path = "examples/alerts.rs"
required-features = ["bevy/bevy_winit", "bevy/x11"]
